# signalApngSticker

./: README.md  bot.py  download.py  giff  script_v2.sh  script_v2_beta.sh
TgsToApng/: Cargo.toml  uploader.py
TgsToApng/src/: ffmpeg.rs  main.rs  makeapng.rs  pngtool.rs  tgsGet.rs  tgsup.rs
script_v3/: bot.py  core  core-hybrid  core.new  script_v3.sh
scripts_linux/: README.md  giff-older  script_v1(deprecated).sh
scripts_linux/script_v3/: bot.py  core-fps  core-hybrid  download.py
scripts_linux/script_v4/: bot.py  core-hybrid  script_v4.sh
tgs_to_apng/: Cargo.toml  uploader.py
tgs_to_apng/src/: ffmpeg.rs  main.rs  makeapng.rs  pngtool.rs  tgs_get.rs  tgsup.rs
