[package]
name = "TgsToApng"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies]
png = "0.17.1"
apng = "0.2.0"
image = "0.23.14"
imagequant = "3.0.3+sys2.14.0"
threadpool = "1.8.1"
oxipng = "5.0.0"
flate2 = "1.0"
libc = "0.2.102"
teloxide-core = "0.3.3"
futures = { version = "0.3", features = ["thread-pool"] }
tokio = { version = "1.11.0", features = ["full"] }

