[package]
name = "tgs_to_apng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.7"
apng = "0.2.0"
image = "0.24.5"
imagequant = "4.0.4"
threadpool = "1.8.1"
oxipng = "7.0.0"
flate2 = "1.0.25"
libc = "0.2.138"
teloxide = "0.11.3"
futures = { version = "0.3.25", features = ["thread-pool"] }
tokio = { version = "1.23.0", features = ["full"] }

